# phi3-mini-pashto-lora

./: .coverage  .gitignore  .pre-commit-config.yaml  DATASET_CARD_TEMPLATE.md  Dockerfile  LICENSE  MODEL_CARD_TEMPLATE.md  README.md  accelerate_config.yaml  evaluate.py  finetune_config.yaml  inference.py  pyproject.toml  requirements-dev.txt  requirements.txt  train_lora.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement_task.md
.github/workflows/: tests.yml
deepspeed/: ds_config_zero2.json
evaluation/: metrics.py  run_eval_instruction.py  run_eval_translation.py
hf_space/: DEPLOY.md  README.md  app.py  create_space.py  requirements.txt
safety/: filter.py
scripts/: compare_quantization.py  download_afghan_books.sh  download_pdf_books.py  export_awq.py  export_gguf.py  merge_lora.py  run_finetune.sh  tune_headers.py
tests/: test_clean_pashto.py  test_prompt_template.py
