[project]
name = "zamai-phi3-pashto"
version = "0.1.0"
description = "Pashto fine-tuning & evaluation utilities for Phi-3 Mini"
authors = [{name = "tasal9"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.7.0"
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-select = ["I"]
src = ["."]
exclude = ["data"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"